Added ProjectAccess API, added auth checks to proj/exp/plate services